# ecalcore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpack_config.cmake
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
cmake/: ecalcoreConfig.cmake.in
cmake/ecalcore-module/: Findecalcore.cmake
ecalcore/: CMakeLists.txt
ecalcore/core/: CMakeLists.txt  ecalcore_version.h.in  version.cmake
ecalcore/core/cfg/: ecal.ini
ecalcore/core/include/ecal/: ecal.h  ecal_c.h  ecal_c_types.h  ecal_callback.h  ecal_deprecate.h  ecal_init.h  ecal_log_level.h  ecal_process.h  ecal_publisher.h  ecal_subscriber.h  ecal_util.h
ecalcore/core/include/ecal/cimpl/: ecal_callback_cimpl.h  ecal_core_cimpl.h  ecal_init_cimpl.h  ecal_process_cimpl.h  ecal_publisher_cimpl.h  ecal_subscriber_cimpl.h  ecal_util_cimpl.h
ecalcore/core/include/ecal/msg/: subscriber.h
ecalcore/core/include/ecal/msg/protobuf/: subscriber.h
ecalcore/core/include/ecal/msg/string/: subscriber.h
ecalcore/core/src/: ecal.cpp  ecal_c.cpp  ecal_def_ini.h  ecal_global_accessors.cpp  ecal_global_accessors.h  ecal_globals.cpp  ecal_globals.h  ecal_process.cpp  ecal_util.cpp
ecalcore/core/src/config/: ecal_config.cpp  ecal_config_reader.cpp
ecalcore/core/src/io/shm/: ecal_memfile_pool.cpp  ecal_memfile_pool.h
ecalcore/core/src/io/udp/: ecal_udp_sample_sender.cpp  ecal_udp_sample_sender.h
ecalcore/core/src/pubsub/: ecal_pubgate.cpp  ecal_publisher.cpp  ecal_subgate.cpp  ecal_subscriber.cpp
ecalcore/core/src/readwrite/: ecal_reader.cpp  ecal_writer.cpp  ecal_writer.h
ecalcore/core/src/readwrite/shm/: ecal_writer_shm.cpp
ecalcore/core/src/readwrite/tcp/: ecal_writer_tcp.cpp
ecalcore/core/src/readwrite/udp/: ecal_writer_udp_mc.cpp
ecalcore/core/src/registration/: ecal_registration_provider.cpp  ecal_registration_provider.h  ecal_registration_receiver.cpp  ecal_registration_receiver.h
ecalcore/core/src/serialization/: ecal_serialize_common.cpp  ecal_serialize_common.h  ecal_serialize_logging.cpp  ecal_serialize_logging.h  ecal_serialize_sample_payload.cpp  ecal_serialize_sample_payload.h  ecal_serialize_sample_registration.cpp  ecal_serialize_sample_registration.h  ecal_serialize_service.cpp  ecal_serialize_service.h
ecalcore/core/src/serialization/nanopb/: ecal.pb.c  ecal.pb.h  host.pb.c  host.pb.h  layer.pb.c  layer.pb.h  monitoring.pb.c  monitoring.pb.h  process.pb.c  process.pb.h  service.pb.c  service.pb.h  topic.pb.c  topic.pb.h
ecalcore/core/src/service/: ecal_service_server_impl.cpp
ecalcore/core/src/time/: ecal_time.cpp
ecalcore/core/src/util/: ecal_thread.h
ecalcore/service/: CMakeLists.txt
ecalcore/utils/: CMakeLists.txt
protobuf/: monitoring.proto  topic.proto
samples/: CMakeLists.txt
samples/c/pubsub/string/minimal_rec/: CMakeLists.txt
samples/c/pubsub/string/minimal_rec/src/: minimal_rec.c
samples/c/pubsub/string/minimal_rec_cb/: CMakeLists.txt
samples/c/pubsub/string/minimal_rec_cb/src/: minimal_rec_cb.c
samples/c/pubsub/string/minimal_snd/: CMakeLists.txt
samples/c/pubsub/string/minimal_snd/src/: minimal_snd.c
samples/cpp/benchmarks/counter_rec/: CMakeLists.txt
samples/cpp/benchmarks/counter_snd/: CMakeLists.txt
samples/cpp/benchmarks/datarate_rec/: CMakeLists.txt
samples/cpp/benchmarks/datarate_snd/: CMakeLists.txt
samples/cpp/benchmarks/latency_rec/: CMakeLists.txt
samples/cpp/benchmarks/latency_snd/: CMakeLists.txt
samples/cpp/benchmarks/many_connections_rec/: CMakeLists.txt
samples/cpp/benchmarks/many_connections_snd/: CMakeLists.txt
samples/cpp/benchmarks/multiple_rec/: CMakeLists.txt
samples/cpp/benchmarks/multiple_snd/: CMakeLists.txt
samples/cpp/benchmarks/performance_rec/: CMakeLists.txt
samples/cpp/benchmarks/performance_snd/: CMakeLists.txt
samples/cpp/benchmarks/perftool/: CMakeLists.txt
samples/cpp/pubsub/binary/binary_rec/: CMakeLists.txt
samples/cpp/pubsub/binary/binary_snd/: CMakeLists.txt
samples/cpp/pubsub/binary/ping/: CMakeLists.txt
samples/cpp/pubsub/binary/pong/: CMakeLists.txt
samples/cpp/pubsub/protobuf/person_events_rec/: CMakeLists.txt
samples/cpp/pubsub/protobuf/person_events_snd/: CMakeLists.txt
samples/cpp/pubsub/protobuf/person_loopback/: CMakeLists.txt
samples/cpp/pubsub/protobuf/person_rec/: CMakeLists.txt
samples/cpp/pubsub/protobuf/person_snd/: CMakeLists.txt
samples/cpp/pubsub/string/minimal_rec/: CMakeLists.txt
samples/cpp/pubsub/string/minimal_rec_cb/: CMakeLists.txt
samples/cpp/pubsub/string/minimal_snd/: CMakeLists.txt
samples/cpp/services/latency_client/: CMakeLists.txt
samples/cpp/services/latency_server/: CMakeLists.txt
samples/cpp/services/math_client/: CMakeLists.txt
samples/cpp/services/math_server/: CMakeLists.txt
samples/cpp/services/minimal_client/: CMakeLists.txt
samples/cpp/services/minimal_server/: CMakeLists.txt
samples/cpp/services/ping_client/: CMakeLists.txt
samples/cpp/services/ping_server/: CMakeLists.txt
tests/: CMakeLists.txt
tests/clientserver_proto_test/: CMakeLists.txt
tests/clientserver_test/: CMakeLists.txt
tests/core_test/: CMakeLists.txt
tests/expmap_test/: CMakeLists.txt
tests/expmap_test/src/: expmap_test.cpp
tests/io_memfile_test/: CMakeLists.txt
tests/pubsub_proto_test/: CMakeLists.txt
tests/pubsub_test/: CMakeLists.txt
tests/pubsub_test/src/: pubsub_test.cpp
tests/serialization_test/: CMakeLists.txt
tests/serialization_test/src/: logging_generate.cpp  logging_serialization_test.cpp  payload_generate.cpp  payload_serialization_test.cpp  registration_generate.cpp  registration_serialization_test.cpp  service_generate.cpp  service_serialization_test.cpp
tests/topic2mcast_test/: CMakeLists.txt
tests/util_test/: CMakeLists.txt
